--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             <i class="bx bxl-instagram-alt"></i>
           </a>
           <!-- FACEBOOK ICONE -->
-          <a href="https://twitter.com/miroxleon" target="_blank">
+          <a href="#" target="_blank">
             <i class="bx bxl-facebook-circle"></i>
           </a>
           <!-- SITE ICONE -->
-          <a href="https://miroleon.de/links" target="_blank">
+          <a href="https://www.youtube.com/@AtHomeKnife" target="_blank">
             <i class="bx bx-globe"></i>
           </a>
           <!-- YOUTUBE ICONE -->
