--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </div>
   <!-- SCRIPT -->
   <script src="loader/loader.js"></script>
-  <script type="module" src="/script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
