Update: Optimized smooth scroll, updated HDRI and materials, adjusted lighting

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <!-- Logo -->
-  <div class="logo-container">
+  <div class="logo-container" id="logo-btn">
     <img src="logo/logo 2025 SVG.svg" alt="Logo" class="logo">
   </div>
 
@@ -30,7 +30,7 @@
 
     <section class="section" id="section-1">
 
-      <div class="scroll-container">
+      <div class="scroll-container" id="scroll-btn">
         <div class="scroll-ring">
           <div class="scroll-ball"></div>
           <div class="glow"></div>
@@ -98,7 +98,3 @@
 </body>
 
 </html>
-
-
-
-<!-- FIN HTML  -->
