Modifs-MENU HAUT D

--- a/index.html
+++ b/index.html
@@ -25,6 +25,43 @@
     <img src="logo/logo 2025 SVG.svg" alt="Logo" class="logo">
   </div>
 
+  <!-- ---------- ⥥ MENU HAUT DROITE ⥥ ---------- -->
+  <nav class="menu-container">
+    <div class="menu">
+      <a href="#section-1" class="menu-item">
+        <div class="text-wrapper">
+          <span class="text">ACCUEIL</span>
+          <span class="text-deep">ACCUEIL</span>
+        </div>
+      </a>
+      <a href="#section-studio" class="menu-item">
+        <div class="text-wrapper">
+          <span class="text">STUDIO</span>
+          <span class="text-deep">STUDIO</span>
+        </div>
+      </a>
+      <a href="#section-concert" class="menu-item">
+        <div class="text-wrapper">
+          <span class="text">CONCERTS</span>
+          <span class="text-deep">CONCERTS</span>
+        </div>
+      </a>
+      <a href="#section-coutellerie" class="menu-item">
+        <div class="text-wrapper">
+          <span class="text">COUTELLERIE</span>
+          <span class="text-deep">COUTELLERIE</span>
+        </div>
+      </a>
+      <a href="#section-clips" class="menu-item">
+        <div class="text-wrapper">
+          <span class="text">CLIPS</span>
+          <span class="text-deep">CLIPS</span>
+        </div>
+      </a>
+    </div>
+  </nav>
+
+
   <!-- ---------- ⥥ SCROLL DOWN ⥥ ---------- -->
   <div class="main-container">
 
@@ -83,12 +120,17 @@
       </div>
     </section>
 
-    <section class="section" id="section-2">
-      <h1>Section 2</h1>
+    <section id="section-studio">
+      Section Studio
     </section>
-
-    <section class="section" id="section-3">
-      <h1>Section 3</h1>
+    <section id="section-concert">
+      Section Concerts
+    </section>
+    <section id="section-coutellerie">
+      Section Coutellerie
+    </section>
+    <section id="section-clips">
+      Section Clips
     </section>
 
   </div>
