--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="loader/loader.css" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style-section2-studio.css">
 </head>
 
 <body>
@@ -121,8 +122,24 @@
     </section>
 
     <section id="section-studio">
-      Section Studio
+      <!-- Section Studio -->
+      <div class="studio-content">
+        <div class="studio-text">
+          <!-- Section Studio -->
+        </div>
+        <div class="studio-video-container">
+
+          <video class="studio-video" autoplay muted loop>
+            <source src="https://res.cloudinary.com/dkihbrjno/video/upload/v1733687500/video-test-720_ke66bk.mp4" type="video/mp4">
+            Votre navigateur ne supporte pas la lecture de vidéos.
+          </video>
+
+        </div>
+      </div>
     </section>
+
+
+
     <section id="section-concert">
       Section Concerts
     </section>
@@ -136,6 +153,7 @@
   </div>
   <!-- SCRIPT -->
   <script type="module" src="script.js"></script>
+  <script src="js/studio-parallax.js"></script>
 </body>
 
 </html>
