Modifs-add file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <base href="/AHP-3d-Site-V1/">
   <title>AHP studio</title>
-  <link rel="icon" type="image/x-icon" href="./logo-vide-ombre-porte.ico">
+  <link rel="icon" type="image/x-icon" href="logo-vide-ombre-porte.ico">
   <link rel="stylesheet" href="loader/loader.css" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
