Modifs-add file02

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <base href="/AHP-3d-Site-V1/">
+  <!-- <base href="/AHP-3d-Site-V1/"> -->
   <title>AHP studio</title>
   <link rel="icon" type="image/x-icon" href="logo-vide-ombre-porte.ico">
   <link rel="stylesheet" href="loader/loader.css" />
