Amélioration de l'effet 3D sur la vidéo et ajustement du texte de la section studio

--- a/index.html
+++ b/index.html
@@ -126,7 +126,17 @@
       <!-- Section Studio -->
       <div class="studio-content">
         <div class="studio-text">
-          <!-- Section Studio -->
+          <h2>Sessions studio:</h2>
+          <p>
+            Je réalise des vidéos tournées en studio, en gérant l'ensemble du processus de production de A à Z.
+          </p>
+          <p>
+            J'utilise du matériel semi-professionnel, parfaitement adapté à des projets de tout types, tout en offrant une certaine flexibilité pour m'adapter aux besoins spécifiques de chaque projet.
+          </p>
+          <p>
+            Une fois les prises réalisées, je prends en charge le montage vidéo, en combinant techniques modernes et logiciels performants pour un résultat final dynamique et engageant. Mon objectif est de produire des contenus visuels qui captent l'attention, que ce soit pour des projets artistiques ou narratifs.
+            Je m'assure que chaque vidéo reflète la vision attendu tout en y apportant ma touche personnelle.
+          </p>
         </div>
         <div class="studio-video-container">
 
