Ajustement de la section studio : espacement, animations et suppression du soulignement du titre

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
     </section>
 
-    <section id="section-studio">
+    <section id="section-studio" class="section-2-studio">
       <!-- Section Studio -->
       <div class="studio-content">
         <div class="studio-text">
@@ -131,17 +131,21 @@
             Je réalise des vidéos tournées en studio, en gérant l'ensemble du processus de production de A à Z.
           </p>
           <p>
-            J'utilise du matériel semi-professionnel, parfaitement adapté à des projets de tout types, tout en offrant une certaine flexibilité pour m'adapter aux besoins spécifiques de chaque projet.
+            J'utilise du matériel semi-professionnel, parfaitement adapté à des projets de tout types, tout en offrant
+            une certaine flexibilité pour m'adapter aux besoins spécifiques de chaque projet.
           </p>
           <p>
-            Une fois les prises réalisées, je prends en charge le montage vidéo, en combinant techniques modernes et logiciels performants pour un résultat final dynamique et engageant. Mon objectif est de produire des contenus visuels qui captent l'attention, que ce soit pour des projets artistiques ou narratifs.
+            Une fois les prises réalisées, je prends en charge le montage vidéo, en combinant techniques modernes et
+            logiciels performants pour un résultat final dynamique et engageant. Mon objectif est de produire des
+            contenus visuels qui captent l'attention, que ce soit pour des projets artistiques ou narratifs.
             Je m'assure que chaque vidéo reflète la vision attendu tout en y apportant ma touche personnelle.
           </p>
         </div>
         <div class="studio-video-container">
 
           <video class="studio-video" autoplay muted loop>
-            <source src="https://res.cloudinary.com/dkihbrjno/video/upload/v1733687500/video-test-720_ke66bk.mp4" type="video/mp4">
+            <source src="https://res.cloudinary.com/dkihbrjno/video/upload/v1733687500/video-test-720_ke66bk.mp4"
+              type="video/mp4">
             Votre navigateur ne supporte pas la lecture de vidéos.
           </video>
 
@@ -165,6 +169,7 @@
   <!-- SCRIPT -->
   <script type="module" src="script.js"></script>
   <script src="js/studio-parallax.js"></script>
+  <script src="js/section-animations.js"></script>
 </body>
 
 </html>
